* vm_insnhelper.c: attr_writer should return its argument [Bug #7773]

* test/ruby/test_basicinstructions.rb: Test for above

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@39121 b2dd03c8-39d4-4d8f-98ff-823fe69b080e